# xray-classification

./: .gitignore  CLAUDE.md  README.md  densenet.ipynb  efficientnet.ipynb  graphs.py  images.ipynb  main.ipynb  metrics.ipynb  mlp.ipynb  mlp_architecture.tex  pyproject.toml  resnet.ipynb  trees.ipynb  util.py
models/: decisionTree.py  densenet.py  efficientnet.py  mlp.py  randomForest.py  resnet.py
preds/: dt_test_preds.npy  mlp_test_preds.npy  resnet_test_labels.npy  resnet_test_preds.npy  rf_test_labels.npy  rf_test_preds.npy
